--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 <!-- 3. Display the application -->
 <body>
-<my-app>Loading...</my-app>
+<div class="container">
+    <my-app>Loading...</my-app>
+</div>
 </body>
 </html>
