Add tooltips and descriptions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <script>
         System.import('app').catch(function(err){ console.error(err); });
     </script>
+    <script>
+//        $(function () {
+//            $('[data-toggle="tooltip"]').tooltip()
+//        })
+    </script>
 </head>
 <!-- 3. Display the application -->
 <body>
